2013-10-22 v0.0.11 clinton at omniti dot com
  * Return values from metric scanner
  * Cache mechanism overhaul (David Nicklay)

2013-09-10 v0.0.10 clinton at omniti dot com
  * nad check type added
  * Misc cleanup of log messages
  * Clean up attributes on LWRPs, removing some that shouldn't have been exposed
  * Bad call to JSON.parse in nad check type (issue #7, David Nicklay)
  * Bad debug log message (issue #8, David Nicklay)
  * halt_on_error is *experimental*, may simply lead to new, harder to understand errors

2013-08-12 v0.0.9 clinton at omniti dot com  
  * Several minor fixes to change detection in graph datapoints, rules, 
    check bundles, and metrics, which were causing spurious API calls. 
  * :halt_on_error option make it possible to ignore some errors 
    and continue chef run
  * Added HTTP timeout setting as cookbook attribute
  * MetricScanner drivers for :json and :http check types
  * Misc improvements to docs and debugging output

2013-08-06 v0.0.8 clinton at omniti dot com
  * Tags support for check bundles
  * Tags support for graphs

2013-07-23 v0.0.7 clinton at omniti dot com
  * (Eric Saxby) Provide proper default and validation for alpha attribute of graph_datapoint LWRP
  * (Eric Saxby) Add support for guide and composite graph datapoints to graph_datapoint LWRP
  * Correct metric type for text metrics in the nad Metric Scanner driver
  * Fix infinite recursion bug caused by redefining RestClient::Resource, which 
    exhibited only when chef-client was run as a daemon (reloading on intervals).

2013-07-22 v0.0.6 clinton at omniti dot com
  * Change MetricScanner api to distinguish between internal Circonus 
    metric names and human-visible names that appear in the web UI
  * Fix ping metric scanner driver to provide correct internal names
  * Cache clearing support via Node attributes
  * New action :delete for check_bundle LWRP to support deprovisioning

2013-07-16 v0.0.5 clinton at omniti dot com