@@ -1,3 +1,6 @@
+2013-11-12 v0.0.12 mark at omniti dot com
+  * Allow :auto and :guess as targets to use ohai and guess_main_ip() respectively.
+
 2013-10-22 v0.0.11 clinton at omniti dot com
   * Return values from metric scanner
   * Cache mechanism overhaul (David Nicklay)
